--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,7 +29,7 @@ jobs:
 
       - uses: actions/checkout@v3.1.0
         with:
-          path: packages/pimcore-dump-helper
+          path: ./packages/pimcore-dump-helper
 
       - name: Setup PHP
         uses: shivammathur/setup-php@2.22.0
@@ -50,7 +50,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install local repository
-        run: composer config repositories.package_name local packages/pimcore-dump-helper
+        run: composer config repositories.package_name local ./packages/pimcore-dump-helper
 
       - name: Install local package
         run: composer require vintagesucks/pimcore-dump-helper
