--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -53,4 +53,4 @@ jobs:
         run: composer config repositories.pimcore-dump-helper path ./packages/pimcore-dump-helper
 
       - name: Install local package
-        run: composer require "vintagesucks/pimcore-dump-helper:dev-main" --dev
+        run: composer require "vintagesucks/pimcore-dump-helper" --dev
