--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         skeleton:
           - "v10.2.2" # Pimcore ^10.5
 
-    name: Install - PHP ${{ matrix.php }} / Skeleton ${{ matrix.skeleton }}
+    name: PHP ${{ matrix.php }} / Skeleton ${{ matrix.skeleton }}
 
     steps:
       - name: Clone Skeleton
